--- a/samples/LeapFlight/LeapFlight.csproj
+++ b/samples/LeapFlight/LeapFlight.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{28CE9045-583A-4C8A-A120-9FBF7C284340}</ProjectGuid>
+    <ProjectGuid>{88933D39-8903-4F47-92F6-CCAB66E2AEA6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProjectLeapBlue</RootNamespace>
-    <AssemblyName>ProjectLeapBlue</AssemblyName>
+    <RootNamespace>LeapFlight</RootNamespace>
+    <AssemblyName>LeapFlight</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
